<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.example.presentation.ui.screen.recipes.RecipesFragment"
        android:label="@string/recipes" >
        <action
            android:id="@+id/action_recipesFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.presentation.ui.screen.favorites.FavoritesFragment"
        android:label="@string/favorites" >
        <action
            android:id="@+id/action_favoritesFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="com.example.presentation.ui.screen.recipe.RecipeDetailsFragment"
        android:label="@string/recipe">
        <argument
            android:name="recipeId"
            app:argType="integer" />
        <argument
            android:name="isLocal"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
</navigation>